--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,51 @@ spring.rabbitmq.password=guest
 spring.rabbitmq.virtual-host=/
 # 手动ACK 不开启自动ACK模式,目的是防止报错后未正确处理消息丢失 默认 为 none
 spring.rabbitmq.listener.simple.acknowledge-mode=manual
-
 swagger.swaggerEnabled=true;
+
+
+# 禁用 thymeleaf 缓存
+#spring.thymeleaf.cache=false
+# 是否支持批量上传   (默认值 true)
+spring.servlet.multipart.enabled=true
+# 上传文件的临时目录 （一般情况下不用特意修改）
+spring.servlet.multipart.location=
+# 上传文件最大为 1M （默认值 1M 根据自身业务自行控制即可）
+spring.servlet.multipart.max-file-size=10048576
+# 上传请求最大为 10M（默认值10M 根据自身业务自行控制即可）
+spring.servlet.multipart.max-request-size=19485760
+# 文件大小阈值，当大于这个阈值时将写入到磁盘，否则存在内存中，（默认值0 一般情况下不用特意修改）
+spring.servlet.multipart.file-size-threshold=0
+# 判断是否要延迟解析文件（相当于懒加载，一般情况下不用特意修改）
+spring.servlet.multipart.resolve-lazily=false
+
+
+#    freemarker静态资源配置
+
+#       设定ftl文件路径
+spring.freemarker.tempalte-loader-path=classpath:/templates
+#        关闭缓存，及时刷新，上线生产环境需要修改为true
+spring.freemarker.cache=false
+spring.freemarker.charset=UTF-8
+spring.freemarker.check-template-location=true
+spring.freemarker.content-type=text/html
+spring.freemarker.expose-request-attributes=true
+spring.freemarker.expose-session-attributes=true
+spring.freemarker.request-context-attribute=request
+spring.freemarker.suffix=.ftl
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
