--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,13 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
 
+        <!-- 图片压缩-->
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
