--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,14 @@
             <version>0.4.8</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>27.0.1-jre</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
