--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,13 @@
             <version>27.0.1-jre</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.33.Final</version>
+        </dependency>
+
 
     </dependencies>
 
