--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,12 @@
             <version>4.1.33.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.bytedeco</groupId>
+            <artifactId>javacv</artifactId>
+            <version>0.8</version>
+        </dependency>
+
 
     </dependencies>
 
