--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,11 @@
             <version>0.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.0.2.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
