--- a/pom.xml
+++ b/pom.xml
@@ -272,6 +272,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-client</artifactId>
+            <version>4.2.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
