--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,10 @@ master.age=26
 
 
 spring.profiles.active=test
-
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://47.94.252.198:3306/spell
-spring.datasource.username=root
-spring.datasource.password=yuemee@456a
+spring.datasource.url=jdbc:mysql://rm-2ze8ct785r6b0m4nklo.mysql.rds.aliyuncs.com:3306/pintuan
+spring.datasource.username=pintuan
+spring.datasource.password=acCr*%345SP
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.max-idle=10
 spring.datasource.max-wait=10000
@@ -24,10 +23,14 @@ mybatis-plus.mapper-locations=classpath:/mapper/*er.xml
 spring.redis.database=0
 
 spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.password=
 
-spring.redis.port=6379  
-
-#spring.redis.password=
+#spring.redis.hostName=172.16.1.9
+##端口号
+#spring.redis.port=6379
+##如果有密码
+#spring.redis.password=er#er28WO#
 
 
 spring.rabbitmq.host=127.0.0.1
