--- a/pom.xml
+++ b/pom.xml
@@ -234,17 +234,23 @@
             <version>2.0.2.RELEASE</version>
         </dependency>
 
-        <dependency>
-            <groupId>e-iceblue</groupId>
-            <artifactId>spire.pdf</artifactId>
-            <version>2.2.0</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>e-iceblue</groupId>-->
+            <!--<artifactId>spire.pdf</artifactId>-->
+            <!--<version>2.2.0</version>-->
+        <!--</dependency>-->
 
-        <dependency>
-            <groupId>e-iceblue</groupId>
-            <artifactId>spire.pdf.free</artifactId>
-            <version>2.2.2</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>e-iceblue</groupId>-->
+            <!--<artifactId>spire.pdf</artifactId>-->
+            <!--<version>2.6.2</version>-->
+        <!--</dependency>-->
+
+        <!--<dependency>-->
+            <!--<groupId>e-iceblue</groupId>-->
+            <!--<artifactId>spire.pdf.free</artifactId>-->
+            <!--<version>2.2.2</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
